Fix `input` buttons on iOS Safari
Ref: wfp/wfp-org-d8/issues/373

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,8 +1,6 @@
 // Component: Buttons
 // Project: WFPUI
 
-
-
 // Additional colours
 $color-twitter: #55acee;
 $color-facebook: #3b5998;
@@ -20,6 +18,7 @@ $color-gplus: #dc4e41;
   border-radius: 3px;
   vertical-align: baseline;
   box-shadow: rgba($black, 0.20) 0 1px 3px;
+  -webkit-appearance: none;
 
   // Active Button
   &.active,
